# opticore

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
algorithms/: Cargo.toml  utils.rs
algorithms/src/: lib.rs
algorithms/src/metaheuristics/: local_search.rs
core/: Cargo.toml
core/src/: lib.rs  mod.rs  model.rs  objective.rs  solver.rs  variable.rs
examples/: assignment.rs  assingment.rs  travel_salesman_local_search.rs  tsp.rs  utils.rs
src/: lib.rs  objective.rs
src/metaheuristics/: local_search.rs  mod.rs
src/metaheuristics/operators/: mod.rs
src/operators/: mod.rs
