[package]
name = "opticore"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0-alpha.2"
tokio = { version = "1.40.0", features = ["time"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
